// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when limit is exceeded 1`] = `
<View
  style={
    Object {
      "paddingLeft": 4,
      "paddingVertical": 4,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "fontSize": 12,
          "textAlign": "right",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    2
     / 
    1
  </Text>
</View>
`;

exports[`renders when limit is set 1`] = `
<View
  style={
    Object {
      "paddingLeft": 4,
      "paddingVertical": 4,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "fontSize": 12,
          "textAlign": "right",
        },
        Object {
          "color": "blue",
        },
      ]
    }
  >
    1
     / 
    1
  </Text>
</View>
`;
